--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Amanda Kerr
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme 
+title: [Amanda Kerr]
 #logo: 
-description: Student
-#show_downloads: true
-theme: jekyll-theme-minimal
+description: [Student]
+show_downloads: [false]
