--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme 
 title: [Amanda Kerr]
-logo: https://github.com/amarkerr/amarkerr.github.io/blob/Assets/20240725_134035-rez.jpg?raw=true 
+logo: https://github.com/amarkerr/amarkerr.github.io/blob/Assets/logo.png?raw=true
 description: [Student]
 show_downloads: false
