--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ plugins:
 - jekyll-remote-theme 
 title: [Amanda Kerr]
 logo: https://github.com/amarkerr/amarkerr.github.io/blob/Assets/logo.png?raw=true
-description: [Student Developer || Crafting Clear, Inclusive Experiences]
+description: [Student Developer || Accessible Software Enthusiast]
 show_downloads: false
