--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 title: [Amanda Kerr]
 logo: https://github.com/amarkerr/amarkerr.github.io/blob/Assets/logo.png?raw=true
 description: [Student Developer || Inclusive Design
-Graduation May, 2025]
+Graduating in May 2025]
 show_downloads: false
